objects/LLC_BI__Collateral__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__State__c</fullName>
        <description>The state that this piece of Collateral is located at.</description>
        <inlineHelpText>The state that this piece of Collateral is located at.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is manually selected and specifies the collateral pledged status as either Pending (incomplete or not yet available for pledging), Available, or Released (Lien has been released).</description>
        <inlineHelpText>Manually select the collateral pledged status as either Pending (incomplete or not yet available for pledging), Available, or Released (Lien has been released).</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Street_Address__c</fullName>
        <description>This field is optional and manually populated. It is the street address where the collateral is located.</description>
        <inlineHelpText>The street address that this piece of Collateral is located at.</inlineHelpText>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Subdivision__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the subdivision information for real estate collateral.</description>
        <label>Subdivision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the third lien position.</description>
        <label>Third Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>3rd</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_City__c</fullName>
        <description>This field is optional and manually populated. This field is used to specify the city of a third party associated with the collateral that is being used to secure a loan.</description>
        <label>Third Party City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Company__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the third party company associated with the collateral being used to secure a loan.</description>
        <label>Third Party Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the state address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Street_Address__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Zip_Code__c</fullName>
        <description>This field is optional and manually populated. This field is used to specify the ZIP code of the address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Active_Loans_Value__c</fullName>
        <description>The system automatically populates this field with the sum of all loan amounts actively pledged to this piece of collateral.</description>
        <inlineHelpText>Displays the sum of all loan amounts actively pledged to this piece of collateral.</inlineHelpText>
        <label>Total Active Loans Value</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Original_Loan_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Collateral_Rollup_Lendable_Value__c</fullName>
        <description>Currency field that represents the summation of collateral Lendable Value field for all direct children of a collateral record. Used in Complex Collateral scenarios.</description>
        <label>Total Collateral Rollup Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Collateral_Rollup_Value__c</fullName>
        <description>Currency field that represents the summation of collateral Value field for all direct children of a collateral record. Used in Complex Collateral scenarios.</description>
        <label>Total Collateral Rollup Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Excluded_Lien_Amount__c</fullName>
        <description>This field is optional and auto-populates as a rollup summary of all lien amounts that are being excluded from calculations.</description>
        <inlineHelpText>This field is a rollup summary of all Lien Amounts that are being excluded from calculations.</inlineHelpText>
        <label>Total Excluded Lien Amount</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Is_Excluded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Excluded_Pledge_Amount__c</fullName>
        <description>This field is optional and auto-populates as a rollup summary of all pledges that are being excluded from calculations.</description>
        <inlineHelpText>This field is a rollup summary of all Pledges that are being excluded from calculations.</inlineHelpText>
        <label>Total Excluded Pledge Amount</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Amount_Pledged__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Is_Excluded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Lien_Amount__c</fullName>
        <description>This field is optional and manually populated. It is the sum of all liens both held by the bank and liens entered as held by other institutions. It excludes loans in process. This number is based on liens associated to this collateral.</description>
        <inlineHelpText>The sum of all liens both held by the bank and liens entered as held by other institutions, excluding loans in process.</inlineHelpText>
        <label>Total Lien Amount</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Pledge_Amount__c</fullName>
        <description>This field is optional and automatically populated. It is the total pledge amount across all associated loans.</description>
        <inlineHelpText>The total pledge amount across all associated loans.</inlineHelpText>
        <label>Total Pledge Amount</label>
        <summarizedField>LLC_BI__Loan_Collateral2__c.LLC_BI__Amount_Pledged__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Loan_Collateral2__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Loan_Collateral2__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_County_Filing__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the filing number of a UCC financing statement within a county.</description>
        <label>UCC County Filing #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Expiration_County__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the date in which the UCC filing in the county will expire. This is typically five years after it was initiated.</description>
        <label>UCC Expiration (County)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Expiration_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the date in which the UCC filing in the state will expire. This is typically five years after it was initiated.</description>
        <label>UCC Expiration (State)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Financing_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral being used has UCC financial statements currently active on it.</description>
        <label>UCC Financing Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_State_Filing__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the filing number of a UCC financing statement within a state.</description>
        <label>UCC State Filing #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__VIN__c</fullName>
        <description>This field is optional and manually populated. It is the vehicle identification number (VIN) of a piece of collateral.</description>
        <inlineHelpText>Vehicle Identification Number</inlineHelpText>
        <label>VIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Valuation_Frequency__c</fullName>
        <description>A picklist field used to capture the frequency of collateral valuation. This would be entered by the user when a new valuation is entered. No default value.</description>
        <inlineHelpText>Collateral valuation frequency</inlineHelpText>
        <label>Valuation Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Biennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the collateral.</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vessel_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the name of the vessel that is being used to secure the loan.</description>
        <label>Vessel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vesting_Desc__c</fullName>
        <description>Users manually populate this optional text field. This field is used to describe how the property is held by the owner(s).</description>
        <label>Vesting Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Built__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the year a real estate property being used to secure a loan was built.</description>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the year the titled collateral being used to secure the loan was made.</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Zip_Code__c</fullName>
        <description>This field is optional and manually populated. It is the ZIP code where this piece of collateral is located.</description>
        <inlineHelpText>The zip code where this piece of collateral is located.</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isFutureContext__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is currently not being used.</description>
        <label>isFutureContext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Latitude_Formula__c</fullName>
        <formula>LLC_BI__Collateral_Location__Latitude__s</formula>
        <label>Latitude Formula</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude_Formula__c</fullName>
        <formula>LLC_BI__Collateral_Location__Longitude__s</formula>
        <label>Longitude Formula</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NADA_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://www.nada.com&quot;, &quot;Click Me!&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NADA Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OREO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OREO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <description>This is only used to store the relationship name for collateral ownership in a process builder.</description>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sustainability_Category__c</fullName>
        <description>Measurement of the environmental sustainability of a vessel</description>
        <inlineHelpText>Please mark the sustainability category of the vessel</inlineHelpText>
        <label>Sustainability Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Holdings_Lendable_Value__c</fullName>
        <label>Total Holdings Lendable Value</label>
        <summarizedField>Holding__c.Total_Lendable_Value__c</summarizedField>
        <summaryForeignKey>Holding__c.Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Holdings_Value__c</fullName>
        <label>Total Holdings Value</label>
        <summarizedField>Holding__c.Total_Value__c</summarizedField>
        <summaryForeignKey>Holding__c.Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(LLC_BI__Collateral_Type__r.LLC_BI__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type from the collateral type object</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_Australia_States__c</fullName>
        <description>ONLY USED FOR AUSTRALIAN USE CASES doesn&apos;t touch anything or anyone&apos;s config</description>
        <label>Z-Australia States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Capital Territory</fullName>
                </value>
                <value>
                    <fullName>New South Wales</fullName>
                </value>
                <value>
                    <fullName>Victoria</fullName>
                </value>
                <value>
                    <fullName>Queensland</fullName>
                </value>
                <value>
                    <fullName>South Australia</fullName>
                </value>
                <value>
                    <fullName>Western Australia</fullName>
                </value>
                <value>
                    <fullName>Tasmania</fullName>
                </value>
                <value>
                    <fullName>Northern Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Z_Canadian_States__c</fullName>
        <label>Z - Canadian States</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>British Columbia</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>New Brunswick</fullName>
                </value>
                <value>
                    <fullName>Newfoundland and Labrador</fullName>
                </value>
                <value>
                    <fullName>Northwest Territories</fullName>
                </value>
                <value>
                    <fullName>Nova Scotia</fullName>
                </value>
                <value>
                    <fullName>Nunavut</fullName>
                </value>
                <value>
                    <fullName>Ontario</fullName>
                </value>
                <value>
                    <fullName>Prince Edward Island</fullName>
                </value>
                <value>
                    <fullName>Quebec</fullName>
                </value>
                <value>
                    <fullName>Saskatchewan</fullName>
                </value>
                <value>
                    <fullName>Yukon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nMAPPER__Location__c</fullName>
        <label>Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>nSBA__Appraisal_Type__c</fullName>
        <description>Collateral Appraisal Type</description>
        <label>Appraisal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broker Opinion Of Value</fullName>
                </value>
                <value>
                    <fullName>Drive By</fullName>
                </value>
                <value>
                    <fullName>Limited Appraisal</fullName>
                </value>
                <value>
                    <fullName>MAI Standard</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Do_Not_Send_Over_ETran__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if you don&apos;t want to send this collateral record over E-Tran.</description>
        <inlineHelpText>Check this field if you don&apos;t want to send this collateral record over E-Tran.</inlineHelpText>
        <label>Do not send over E-Tran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Evidence_Of_Title__c</fullName>
        <description>Evidence of title and priority of lien. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Evidence of title and priority of lien. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Evidence Of Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALTA Loan Policy insuring lender and assigns</fullName>
                </value>
                <value>
                    <fullName>Mortgagee’s Title Policy insuring lender and assigns</fullName>
                </value>
                <value>
                    <fullName>Attorney’s certificate of title or title opinion in favor of lender and assigns certifying that lender has obtained the required lien position</fullName>
                </value>
                <value>
                    <fullName>Title insurance customarily obtained for similar transactions in this jurisdiction</fullName>
                </value>
                <value>
                    <fullName>Title and/or Lien Search or other evidence of proper ownership and lien position</fullName>
                </value>
                <value>
                    <fullName>CLTA Loan Policy</fullName>
                </value>
                <value>
                    <fullName>Limited Title Policy</fullName>
                </value>
                <value>
                    <fullName>Property, Judgment and Lien Report indicating that lender has obtained the required position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Liquor_License_Number__c</fullName>
        <description>Liquor License Number. Use this field only if Collateral Sub-Type is Liqour License. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Liquor License Number. Use this field only if Collateral Sub-Type is Liqour License. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Liquor License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Liquor_License_Proceeds_Of_Sale_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if only Liquor License Proceeds Of Sale are pledged as collateral. Use this field only if Collateral Sub-Type is Liqour License. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if only Liquor License Proceeds Of Sale are pledged as collateral. Use this field only if Collateral Sub-Type is Liqour License. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Liquor License Proceeds Of Sale Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Note_Assignments__c</fullName>
        <description>List of Note Assignments. Use this field only if Collateral Sub-Type is Note. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List of Note Assignments. Use this field only if Collateral Sub-Type is Note. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Note Assignments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Note_Date__c</fullName>
        <description>Date of Note. Use this field only if Collateral Sub-Type is Note. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Date of Note. Use this field only if Collateral Sub-Type is Note. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Note_Executed_By__c</fullName>
        <description>Note Executed By. Use this field only if Collateral Sub-Type is Note. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Note Executed By. Use this field only if Collateral Sub-Type is Note. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Note Executed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>